--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Venue - Responsive Web Template</title>
+        <title>CV Karya Budi Mulya</title>
         
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,12 +34,13 @@
                     <div class="col-md-12">
                         <button id="primary-nav-button" type="button">Menu</button>
                         <a href="index.html"><div class="logo">
-                            <img src="img/logo.png" alt="Venue Logo">
+                            <img style="width: 90px;" src="img/logo_kbm.jpeg" alt="Venue Logo">
                         </div></a>
                         <nav id="primary-nav" class="dropdown cf">
                             <ul class="dropdown menu">
-                                <li class='active'><a href="#">Popular</a></li>
-                                <li><a href="#">Most Visited</a>
+                                <li class='active'><a href="#">Beranda</a></li>
+                                <li><a class="scrollTo" data-scrollTo="services" href="#">Tentang Kami</a></li>
+                                <li><a href="#">Layanan</a>
                                     <ul class="sub-menu">
                                         <li><a href="#">Most Visited 1</a>
                                             <ul class="sub-menu">
@@ -65,9 +66,8 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a class="scrollTo" data-scrollTo="blog" href="#">Blog Entries</a></li>
-                                <li><a class="scrollTo" data-scrollTo="services" href="#">Our Services</a></li>
-                                <li><a class="scrollTo" data-scrollTo="contact" href="#">Contact Us</a></li>
+                                <li><a class="scrollTo" data-scrollTo="blog" href="#">Galeri</a></li>
+                                <li><a class="scrollTo" data-scrollTo="contact" href="#">Hubungi Kami</a></li>
                             </ul>
                         </nav><!-- / #primary-nav -->
                     </div>
@@ -84,13 +84,16 @@
                 <div class="col-md-10 col-md-offset-1">
                     <div class="banner-caption">
                         <div class="line-dec"></div>
-                        <h2>Best Finder For You</h2>
-                        <span>Suspendisse eu lorem massa. Integer sit amet posuere tellus.</span>
+                        <h2>Sewa Alat Berat</h2>
+                        <span>CV. Karya Budi Mulya menyediakan pelayanan jasa
+                                berupa rental/penyewaan alat-alat crane, jasa levelling
+                                machine, jacking machine dan jasa angkutan serta layanan
+                                Purna Jual</span>
                         <div class="blue-button">
                             <a class="scrollTo" data-scrollTo="popular" href="#">Discover More</a>
                         </div>
                     </div>
-                    <div class="submit-form">
+                    <!-- <div class="submit-form">
                         <form id="form-submit" action="" method="get">
                             <div class="row">
                                 <div class="col-md-3 first-item">
@@ -124,7 +127,7 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -135,15 +138,15 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-heading">
-                        <span>Popular Places</span>
-                        <h2>Integer sapien odio</h2>
+                        <span>Galeri Foto</span>
+                        <h2>Dokumentasi kegiatan lapangan</h2>
                     </div>
                 </div> 
             </div> 
             <div class="owl-carousel owl-theme">
                 <div class="item popular-item">
                     <div class="thumb">
-                        <img src="img/popular_item_1.jpg" alt="">
+                        <img src="img/crane1.jpg" alt="">
                         <div class="text-content">
                             <h4>Mauris tempus</h4>
                             <span>76 listings</span>
@@ -155,7 +158,7 @@
                 </div>
                 <div class="item popular-item">
                     <div class="thumb">
-                        <img src="img/popular_item_2.jpg" alt="">
+                        <img src="img/crane2.jpg" alt="">
                         <div class="text-content">
                             <h4>Aenean dolor</h4>
                             <span>18 listings</span>
@@ -167,7 +170,7 @@
                 </div>
                 <div class="item popular-item">
                     <div class="thumb">
-                        <img src="img/popular_item_3.jpg" alt="">
+                        <img src="img/crane3.jpg" alt="">
                         <div class="text-content">
                             <h4>Nunc at quam</h4>
                             <span>55 listings</span>
@@ -326,14 +329,13 @@
     </section>
 
 
-
     <section class="featured-places" id="blog">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-heading">
-                        <span>Featured Places</span>
-                        <h2>Praesent nec dui sed urna</h2>
+                        <span>Layanan Kami</span>
+                        <h2>Cakupan wilayah kegiatan kami dari Sabang – Merauke, terutama di Suamtera & Jawa</h2>
                     </div>
                 </div> 
             </div> 
@@ -341,7 +343,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="featured-item">
                         <div class="thumb">
-                            <img src="img/featured_item_1.jpg" alt="">
+                            <img src="img/crane1.jpg" alt="">
                             <div class="overlay-content">
                                 <ul>
                                     <li><i class="fa fa-star"></i></li>
@@ -357,9 +359,12 @@
                             </div>
                         </div>
                         <div class="down-content">
-                            <h4>Lorem ipsum dolor</h4>
+                            <h4>CRANE</h4>
                             <span>Category One</span>
-                            <p>Vestibulum id est eu felis vulputate hendrerit. Suspendisse dapibus turpis in dui pulvinar imperdiet. Nunc consectetur.</p>
+                            <p>Kegiatan yang kami layani berupa, erection, setting machine, konstruksi,
+                                load test, assembling mesin, stripping/stuffing cargo, lift on/off cargo,
+                                stevedoring, peluncuran
+                                & docking kapal.</p>
                             <div class="row">
                                 <div class="col-md-6 first-button">
                                     <div class="text-button">
@@ -378,7 +383,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="featured-item">
                         <div class="thumb">
-                            <img src="img/featured_item_2.jpg" alt="">
+                            <img src="img/crane2.jpg" alt="">
                             <div class="overlay-content">
                                 <ul>
                                     <li><i class="fa fa-star"></i></li>
@@ -394,9 +399,10 @@
                             </div>
                         </div>
                         <div class="down-content">
-                            <h4>Nullam nibh lacus</h4>
+                            <h4>Trucking</h4>
                             <span>Category Two</span>
-                            <p>Mauris sit amet quam congue, pulvinar urna et, congue diam. Suspendisse eu lorem massa. Integer sit amet posuere.</p>
+                            <p>Mobilisasi & demobilisasi cargo, Overbrengen, Cargodoring, Door to Door
+                                Service, Port to Port Service</p>
                             <div class="row">
                                 <div class="col-md-6 first-button">
                                     <div class="text-button">
@@ -415,7 +421,7 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="featured-item">
                         <div class="thumb">
-                            <img src="img/featured_item_3.jpg" alt="">
+                            <img src="img/crane3.jpg" alt="">
                             <div class="overlay-content">
                                 <ul>
                                     <li><i class="fa fa-star"></i></li>
@@ -431,9 +437,10 @@
                             </div>
                         </div>
                         <div class="down-content">
-                            <h4>Suspendisse semper non</h4>
+                            <h4>Faktur Pajak</h4>
                             <span>Category Three</span>
-                            <p>Praesent iaculis gravida elementum. Proin fermentum neque facilisis semper pharetra. Sed vestibulum vehicula tincidunt.</p>
+                            <p>Perusahaan kami dapat menyediakan faktur pajak untuk keperluan PPn
+                                dan PPh.</p>
                             <div class="row">
                                 <div class="col-md-6 first-button">
                                     <div class="text-button">
@@ -452,8 +459,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section class="our-services" id="services">
         <div class="container">
@@ -501,7 +506,13 @@
                             <div class="col-md-5 col-md-offset-1">
                                 <div class="left-content">
                                     <h4>In hac habitasse platea dictumst</h4>
-                                    <p>Aenean hendrerit metus leo, quis viverra purus condimentum nec. Pellentesque a sem semper, lobortis mauris non, varius urna. Quisque sodales purus eu tellus fringilla.<br><br>Mauris sit amet quam congue, pulvinar urna et, congue diam. Suspendisse eu lorem massa. Integer sit amet posuere tellus, id efficitur leo. In hac habitasse platea dictumst.</p>
+                                    <p>CV. Karya Budi Mulya adalah perusahaan Heavy
+                                            Lifting Rent yaitu kontraktor jasa yang terletak di kawasan
+                                            Cilincing, Jakarta Utara. Kami menyediakan pelayanan jasa
+                                            berupa rental/penyewaan alat-alat crane, jasa levelling
+                                            machine, jacking machine dan jasa angkutan serta layanan
+                                            Purna Jual dengan memberikan kualitas pelayanan terbaik
+                                            dengan harga yang bersaing.</p>
                                     <div class="blue-button">
                                         <a href="#">Discover More</a>
                                     </div>
@@ -632,8 +643,8 @@
                            3. Click "Share" and choose "Embed map" tab
                            4. Copy only URL and paste it within the src="" field below
                     -->
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1197183.8373802372!2d-1.9415093691103689!3d6.781986417238027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb96f349e85efd%3A0xb8d1e0b88af1f0f5!2sKumasi+Central+Market!5e0!3m2!1sen!2sth!4v1532967884907" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7934.3464030923105!2d106.93113250910075!3d-6.107366707159241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6a203ca20a26e3%3A0xd36b2526285b7dd4!2sKarya%20Budi%20Mulya.%20CV!5e0!3m2!1sen!2sid!4v1574772892358!5m2!1sen!2sid" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1197183.8373802372!2d-1.9415093691103689!3d6.781986417238027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb96f349e85efd%3A0xb8d1e0b88af1f0f5!2sKumasi+Central+Market!5e0!3m2!1sen!2sth!4v1532967884907" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe> -->
         </div>
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
@@ -643,6 +654,7 @@
                       <h2>Vivamus nec vehicula felis</h2>
                   </div>
                   <!-- Modal button -->
+                  <a href="https://wa.me/+6281272709003" target='_blank'> test</a>  
                   <button id="modBtn" class="modal-btn">Talk to us</button>
                 </div>  
                 <div id="modal" class="modal">
@@ -765,9 +777,9 @@
                         </div>
                         <p>Praesent iaculis gravida elementum. Proin fermentum neque facilisis semper pharetra. Sed vestibulum vehicula tincidunt.</p>
                         <ul>
-                            <li><span>Phone:</span><a href="#">010-050-0550</a></li>
-                            <li><span>Email:</span><a href="#">hi@company.co</a></li>
-                            <li><span>Address:</span><a href="#">company.co</a></li>
+                            <li><span>Phone:</span><a href="#">021-4358857</a></li>
+                            <li><span>Email:</span><a href="#">cvkbm23@gmail.com</a></li>
+                            <li><span>Address:</span><a href="#">Jl. Raya Cilincing No.23, RT.2/RW.3, Cilincing, Kec. Cilincing, Kota Jkt Utara, Daerah Khusus Ibukota Jakarta 14120 </a></li>
                         </ul>
                     </div>
                 </div>
