--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Industry</title>
+		<title>CV Karya Budi Mulya</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
@@ -44,8 +44,8 @@
 				  				</ul>
 				  			</div>
 				  			<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-				  				<a href="tel:+880 012 3654 896">+880 012 3654 896</a>
-				  				<a href="mailto:support@colorlib.com">support@colorlib.com</a>				
+				  				<a href="https://api.whatsapp.com/send?phone=62811853740">0811853740</a>
+				  				<a href="mailto:cvkbm23@gmail.com">cvkbm23@gmail.com</a>				
 				  			</div>
 				  		</div>			  					
 		  			</div>
@@ -87,7 +87,7 @@
 								Jasa Sewa Alat Berat			
 							</h1>
 							<p class="text-white">
-								CV. Karya Budi Mulya menyediakan pelayanan jasa berupa rental/penyewaan alat-alat crane, jasa levelling machine, jacking machine dan jasa angkutan serta layanan Purna Jual
+								Rental/Penyewaan alat-alat crane, Jasa Levelling Machine, Jacking Machine dan Jasa Angkutan serta Layanan Purna Jual
 							</p>
 							<a href="#" class="primary-btn header-btn text-uppercase">Get Started</a>
 						</div>												
@@ -131,48 +131,6 @@
 				</div>	
 			</section>
 			<!-- End cat Area -->		
-			
-
-			<!-- Start home-about Area -->
-			<section class="home-about-area section-gap" id="about">
-				<div class="container">
-					<div class="row justify-content-center align-items-center">
-						<div class="col-lg-8 col-md-12 home-about-left">
-							<h6>Brand new app to blow your mind</h6>
-							<h1>
-								We’ve made a life <br>
-								that will change you
-							</h1>
-							<p class="sub">We are here to listen from you deliver exellence</p>
-							<p class="pb-20">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-							</p>
-							<a class="primary-btn" href="#">Get Started Now</a>
-						</div>
-						<div class="col-lg-4 col-md-12 home-about-right relative">
-							<form class="form-wrap" action="#">
-								<h4 class="text-white pb-20">Request a Quote</h4>
-								<div class="form-select" id="service-select"">
-									<select>
-										<option value="1">Select Service</option>
-										<option value="2">Service One</option>
-										<option value="3">Service Two</option>
-										<option value="4">Service Three</option>
-										<option value="5">Service Four</option>
-									</select>
-								</div>								
-								<input type="text" class="form-control" placeholder="name">
-								<input type="phone" class="form-control" placeholder="Phone Number">
-								<input type="email" class="form-control" placeholder="Email Address">
-								<textarea name="message" id="" cols="30" rows="5" placeholder="Message" class="form-control"></textarea>
-								<button class="primary-btn">Request Free Quote</button>
-							</form>
-						</div>
-					</div>
-				</div>	
-			</section>
-			<!-- End home-about Area -->
-					
 
 			<!-- Start service Area -->
 			<section class="service-area section-gap" id="service">
@@ -474,7 +432,45 @@
 			</section>
 			<!-- end blog Area -->	
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7934.3464030923105!2d106.93113250910075!3d-6.107366707159241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6a203ca20a26e3%3A0xd36b2526285b7dd4!2sKarya%20Budi%20Mulya.%20CV!5e0!3m2!1sen!2sid!4v1574772892358!5m2!1sen!2sid" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-			
+			<!-- Start home-about Area -->
+			<section class="home-about-area section-gap" id="about">
+				<div class="container">
+					<div class="row justify-content-center align-items-center">
+						<div class="col-lg-8 col-md-12 home-about-left">
+							<h6>Brand new app to blow your mind</h6>
+							<h1>
+								We’ve made a life <br>
+								that will change you
+							</h1>
+							<p class="sub">We are here to listen from you deliver exellence</p>
+							<p class="pb-20">
+								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
+							</p>
+							<a class="primary-btn" href="#">Get Started Now</a>
+						</div>
+						<div class="col-lg-4 col-md-12 home-about-right relative">
+							<form class="form-wrap" action="#">
+								<h4 class="text-white pb-20">Request a Quote</h4>
+								<div class="form-select" id="service-select"">
+									<select>
+										<option value="1">Select Service</option>
+										<option value="2">Service One</option>
+										<option value="3">Service Two</option>
+										<option value="4">Service Three</option>
+										<option value="5">Service Four</option>
+									</select>
+								</div>								
+								<input type="text" class="form-control" placeholder="name">
+								<input type="phone" class="form-control" placeholder="Phone Number">
+								<input type="email" class="form-control" placeholder="Email Address">
+								<textarea name="message" id="" cols="30" rows="5" placeholder="Message" class="form-control"></textarea>
+								<button class="primary-btn">Request Free Quote</button>
+							</form>
+						</div>
+					</div>
+				</div>	
+			</section>
+			<!-- End home-about Area -->
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
 				<div class="container">
@@ -483,7 +479,7 @@
 							<div class="single-footer-widget">
 								<h6>About Us</h6>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+									CV. Karya Budi Mulya menyediakan pelayanan jasa berupa rental/penyewaan alat-alat crane, jasa levelling machine, jacking machine dan jasa angkutan serta layanan Purna Jual
 								</p>
 								<p class="footer-text">
 									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
