styling services page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>	
-			  <header id="header" id="home">
+			<header id="header" id="home">
 		  		<div class="header-top">
 		  			<div class="container">
 				  		<div class="row">
@@ -58,23 +58,23 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="index.html">Home</a></li>
-				          <li><a href="about.html">About</a></li>
-				          <li><a href="services.html">Service</a></li>
-				          <li><a href="projects.html">Projects</a></li>
-				          <li class="menu-has-children"><a href="">Blog</a>
+				          <li class="menu-active"><a href="index.html">Beranda</a></li>
+				          <!-- <li><a href="about.html">About</a></li> -->
+				          <li><a href="services.html">Alat Berat</a></li>
+				          <li><a href="projects.html">Foto Proyek</a></li>
+				          <!-- <li class="menu-has-children"><a href="">Blog</a>
 				            <ul>
 				              <li><a href="blog-home.html">Blog Home</a></li>
 				              <li><a href="blog-single.html">Blog Single</a></li>
 				            </ul>
-				          </li>						          
-				          <li><a href="contact.html">Contact</a></li>
-			              <li><a href="elements.html">Elements</a></li>
+				          </li>						           -->
+				          <li><a href="contact.html">Hubungi Kami</a></li>
+			              <!-- <li><a href="elements.html">Elements</a></li> -->
 				        </ul>
 				      </nav><!-- #nav-menu-container -->		    		
 			    	</div>
 			    </div>
-			  </header><!-- #header -->
+			</header><!-- #header -->
 
 			<!-- start banner Area -->
 			<section class="banner-area relative" id="home">
@@ -131,13 +131,68 @@
 				</div>	
 			</section>
 			<!-- End cat Area -->		
-
+			<!-- Start project Area -->
+			<section class="project-area section-gap" id="project">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-md-8 pb-30 header-text text-center">
+							<h1 class="mb-10">Daftar Alat Berat</h1>
+							<p>
+								Crane, Truck, Buntut
+							</p>
+						</div>
+					</div>						
+					<div class="row">
+						<div class="col-lg-4 col-md-4">
+							<a href="img/crane16.png" class="img-gal">
+								<img class="img-fluid single-project" src="img/crane16.png" alt="">
+							</a>	
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/crane19.png" class="img-gal">
+								<img class="img-fluid single-project" src="img/crane19.png" alt="">
+							</a>	
+						</div>		
+						<div class="col-lg-4 col-md-4">
+							<a href="img/crane18.png" class="img-gal">
+								<img class="img-fluid single-project" src="img/crane18.png" alt="">
+							</a>	
+						</div>
+						<div class="col-lg-4 col-md-4">
+							<a href="img/crane17.png" class="img-gal">
+								<img class="img-fluid single-project" src="img/crane17.png" alt="">
+							</a>	
+						</div>						
+						<div class="col-lg-4 col-md-4">
+							<a href="img/crane20.png" class="img-gal">
+								<img class="img-fluid single-project" src="img/crane20.png" alt="">
+							</a>	
+						</div>		
+						<div class="col-lg-4 col-md-4">
+							<a href="img/crane21.png" class="img-gal">
+								<img class="img-fluid single-project" src="img/crane21.png" alt="">
+							</a>	
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-12 text-center">
+							<a href="services.html" class="primary-btn header-btn text-uppercase">LIHAT SEMUA</a>	
+						</div>
+					</div>
+						<!-- <div class="col-lg-4 col-md-4">
+							<a href="img/crane22.png" class="img-gal">
+								<img class="img-fluid single-project" src="img/crane22.png" alt="">
+							</a>	
+						</div>		 -->
+				</div>	
+			</section>
+			<!-- End project Area -->
 			<!-- Start service Area -->
 			<section class="service-area section-gap" id="service">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-md-12 pb-30 header-text text-center">
-							<h1 class="mb-10">Our Capturing Market Sectors</h1>
+							<h1 class="mb-10">Galeri Kegiatan Proyek</h1>
 							<p>
 								Who are in extremely love with eco friendly system..
 							</p>
@@ -147,7 +202,7 @@
 						<div class="col-lg-4">
 							<div class="single-service">
 								<div class="thumb">
-									<img src="img/crane4.jpg" alt="">									
+									<img src="img/exp1.PNG" alt="">									
 								</div>
 								<h4>Automotive Engineering</h4>
 								<p>
@@ -158,7 +213,7 @@
 						<div class="col-lg-4">
 							<div class="single-service">
 								<div class="thumb">
-									<img src="img/crane5.jpg" alt="">									
+									<img src="img/exp2.PNG" alt="">									
 								</div>
 								<h4>Construction & Engineering</h4>
 								<p>
@@ -169,7 +224,51 @@
 						<div class="col-lg-4">
 							<div class="single-service">
 								<div class="thumb">
-									<img src="img/crane6.jpg" alt="">									
+									<img src="img/exp3.PNG" alt="">									
+								</div>
+								<h4>Industrial Engineering</h4>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>												
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img src="img/exp4.PNG" alt="">									
+								</div>
+								<h4>Industrial Engineering</h4>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>												
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img src="img/exp5.PNG" alt="">									
+								</div>
+								<h4>Industrial Engineering</h4>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>												
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img src="img/exp6.PNG" alt="">									
+								</div>
+								<h4>Industrial Engineering</h4>
+								<p>
+									inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct women face higher conduct.
+								</p>
+							</div>
+						</div>												
+						<div class="col-lg-4">
+							<div class="single-service">
+								<div class="thumb">
+									<img src="img/exp7.PNG" alt="">									
 								</div>
 								<h4>Industrial Engineering</h4>
 								<p>
@@ -184,7 +283,7 @@
 			
 
 			<!-- Start faq Area -->
-			<section class="faq-area section-gap relative">
+			<!-- <section class="faq-area section-gap relative">
 				<div class="overlay overlay-bg"></div>
 				<div class="container">
 					<div class="row justify-content-center align-items-center">
@@ -234,49 +333,14 @@
 						</div>																		
 					</div>
 				</div>	
-			</section>
+			</section> -->
 			<!-- End faq Area -->
 
 
-			<!-- Start project Area -->
-			<section class="project-area section-gap" id="project">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-md-8 pb-30 header-text text-center">
-							<h1 class="mb-10">Latest Finished Projects</h1>
-							<p>
-								Who are in extremely love with eco friendly system..
-							</p>
-						</div>
-					</div>						
-					<div class="row">
-						<div class="col-lg-8 col-md-8">
-							<a href="img/crane1.jpg" class="img-gal">
-								<img class="img-fluid single-project" src="img/crane1.jpg" alt="">
-							</a>	
-						</div>
-						<div class="col-lg-4 col-md-4">
-							<a href="img/crane2.jpg" class="img-gal">
-								<img class="img-fluid single-project" src="img/crane2.jpg" alt="">
-							</a>	
-						</div>						
-						<div class="col-lg-6 col-md-6">
-							<a href="img/crane3.jpg" class="img-gal">
-								<img class="img-fluid single-project" src="img/crane3.jpg" alt="">
-							</a>	
-						</div>
-						<div class="col-lg-6 col-md-6">
-							<a href="img/p4.jpg" class="img-gal">
-								<img class="img-fluid single-project" src="img/p4.jpg" alt="">
-							</a>	
-						</div>		
-					</div>
-				</div>	
-			</section>
-			<!-- End project Area -->
+			
 						
 			<!-- Start feedback Area -->
-			<section class="feedback-area section-gap relative" id="feedback">
+			<!-- <section class="feedback-area section-gap relative" id="feedback">
 				<div class="overlay overlay-bg"></div>
 				<div class="container">
 					<div class="row justify-content-center">
@@ -343,12 +407,12 @@
 						</div>
 					</div>
 				</div>	
-			</section>
+			</section> -->
 			<!-- End feedback Area -->
 			
 	
 			<!-- Start blog Area -->
-			<section class="blog-area section-gap" id="blog">
+			<!-- <section class="blog-area section-gap" id="blog">
 				<div class="container">
 					<div class="row justify-content-center">
 						<div class="col-md-12 pb-30 header-text">
@@ -429,11 +493,11 @@
 												
 					</div>
 				</div>	
-			</section>
+			</section> -->
 			<!-- end blog Area -->	
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7934.3464030923105!2d106.93113250910075!3d-6.107366707159241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6a203ca20a26e3%3A0xd36b2526285b7dd4!2sKarya%20Budi%20Mulya.%20CV!5e0!3m2!1sen!2sid!4v1574772892358!5m2!1sen!2sid" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 			<!-- Start home-about Area -->
-			<section class="home-about-area section-gap" id="about">
+			<!-- <section class="home-about-area section-gap" id="about">
 				<div class="container">
 					<div class="row justify-content-center align-items-center">
 						<div class="col-lg-8 col-md-12 home-about-left">
@@ -469,7 +533,7 @@
 						</div>
 					</div>
 				</div>	
-			</section>
+			</section> -->
 			<!-- End home-about Area -->
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap">
